# polaris-desk

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/hooks/: block-env-read.sh
.claude/skills/fetch-tw-earnings-call/: SKILL.md
.claude/skills/migrate-wayne-chunks-to-core/: SKILL.md
.github/workflows/: ci.yml  daily-status.yml  security-redteam.yml  security.yml
.specify/: feature.json
.specify/memory/: constitution.md
data/gold/: colpali_gold.example.json  colpali_gold.json
docs/: 2_需求清單_from_R7.md  3_給R7的串接指南_Auth_Firestore.md  4_真人操作_Auth_Firestore_checklist.md  G1_readiness.md  G2_readiness.md  G3_readiness.md  Gemini接地觸點_盤點與選單.md  R1_每日進度_Daily-Status_使用指南.md  R2_首次推GitHub_checklist.md  R3_watchdog_開工指南.md  R3_待辦清單_20260623.md  R3_需求清單_from_R7.md  R4_ingestion_開工指南.md  R4_資料下載清單.md  R7_frontend_開工指南.md  R7_前端待辦清單.md  architecture.md  colpali_roundtrip_test_cases.md  keys-setup.md  vision-OCR_gdrive_中文簡報清單.csv  vision-OCR_入庫分工.md  vision-OCR_測試與驗證指南.md  上線通知_給全員.md  上雲_Cloud_Run_runbook.md  協作開發環境_SOP_v1.md  安全強化_上線門檻_review後續.md  工作紀錄_20260622.md  工作紀錄_20260623.md  架構_檢索路徑與ask流程.md  測試指南_無UI.md  進度紀錄_20260622.md  開發時程_2026-06-12_W3W4_Demo衝刺.md  開發環境_BigQuery.md
docs/blog/: 01_workflow_vs_agent.md  02_deep_research_agent.md  README.md
docs/cross-role-collab/: R3_CTO_架構審查_20260625.md  R3_R5_R6_影響分析與優化_20260625.md  R3_模組化改善方向_20260625.md  R3_角色定位與工作範疇_20260625.md  R3_需求清單_from_R7.md  R4_需求清單_from_R7.md  main_merge_影響摘要_20260625.md  跨角色協作清單_2026-06-18.md  開會議程_待決策事項_2026-06-18.md
docs/demo/promo_video/: README.md  promo.html  render.py
docs/frontend/: animations.md  onboarding-tour-bugfix.md  資料表欄位表.md
docs/r6/annotation/: Annotation_Guideline_v0.2.xlsx
docs/r6/data_dictionary/: Ontology_V1.2_資料字典暨協作手冊.docx
docs/r6/ontology/: Ontology_V1.xlsx
docs/r6/question_bank/: RedTeam_QuestionBank_v0.3.xlsx
docs/r6/test_logs/: R6_Phase2B_Formal_Scope_Dry_Run_2026-06-21.md  R6_Phase2_Formal_Scope_QA_2026-06-26.md  R6_Phase3_Final_Readiness_UI_Proxy_Latest_Run_2026-06-26.md
docs/r7/: Auth_Firestore.md  R7_前端狀態.md  R7_開發日誌.md  issue77_跨公司檢索污染_R7排查紀錄_20260701.md  issue78_inline引用標記格式不一致_R7排查紀錄_20260701.md  onboarding-tour.md  peer_kpi_grid_資料來源與格式說明.md  任務清單_R7前端_20260625.md  修復_對話紀錄點擊peer空白_20260627.md  協作會議紀錄_20260618.md  同業比較_公司選取流程說明_20260625.md  工作紀錄_20260623.md  工作紀錄_20260624.md  工作紀錄_20260626_前端功能調整.md  引用標籤中文化_規格需求_R3_20260626.md  資料缺口分析_研究助理_同業比較.md
docs/spec-kit/: 00_Polaris-Desk_專題_spec.md  Polaris Desk - Spec Kit 導讀.html  R1_PM_spec.md  R2_架構師_spec.md  R3_Agent_spec.md  R4_資料_spec.md  R5_Eval_spec.md  R6_金融品質_spec.md  R7_Demo全端_spec.md  README.md
docs/superpowers/plans/: 2026-06-03-daily-status-sync.md  2026-06-07-fetch-tw-earnings-call-skill.md  2026-06-24-vision-ocr-to-text-ingestion.md
docs/superpowers/specs/: 2026-06-02-r2-w1-d2-d5-design.md  2026-06-03-daily-status-sync-design.md  2026-06-03-r2-w2-d10-g2-bq-smoke-design.md  (+9 more)
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/tests/: peer-result.test.ts
migrations/: 2026-06-08_rename_stock_id_to_ticker.sql  2026-06-12_polaris_core_initial_merge.sql  2026-06-18_chunks_add_event_source_published_attrs_semantic.sql  2026-06-18_colpali_pages_add_event_source_published_attrs.sql  2026-06-22_create_chunks_embedding_semantic_view.sql  2026-06-22_dedupe_chunks_news_rows.sql  2026-06-24_events_rename_columns.sql  2026-06-25_add_r6_financial_metric_rows.sql
notebooks/: colpali_roundtrip_colab.ipynb
reports/daily/: 2026-06-22.csv  2026-06-22.md  2026-06-23.csv  2026-06-23.md  2026-06-24.csv  2026-06-24.md  2026-06-25.csv  2026-06-25.md  2026-06-26.csv  2026-06-26.md  2026-06-27.csv  2026-06-27.md  2026-06-28.csv  2026-06-28.md  2026-06-29.csv  2026-06-29.md  2026-06-30.csv  2026-06-30.md  2026-07-01.csv  2026-07-01.md
scripts/: colpali_roundtrip_check.py  embed_recovery.sh  extract_remaining.sh  gh-throttle.sh  migrate_wayne_chunks_to_core.py  poc_financial_extract.py  poc_transcript_ingest.py  reembed_pending_chunks.py  sync-plugin.sh  vision_batch_ingest.py  vision_ingest_pilot.py  vision_reembed_recovery.py
specs/001-langgraph-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gemini-grounding/: plan.md  spec.md
src/polaris/: __main__.py  api.py  cli.py  config.py  diagnostics.py  ratelimit.py  server.py  structured_store.py  user_store.py
tests/: conftest.py  test_api.py  test_ask_retrieval_filters.py  test_bm25_corpus.py  test_bq_smoke.py  test_calculator_structured.py  test_cli.py  test_colpali_query_encoder.py  test_compliance.py  test_compliance_agent.py  test_compression_compressors.py  test_compression_measure.py  test_compression_poc.py  test_compression_tokens.py  test_daily_status.py  test_deep_research_acceptance.py  test_deep_research_agent.py  test_deep_research_state.py  test_diagnostics.py  test_ec_model.py  test_ec_mops.py  test_ec_todayir.py  test_eval_pipeline.py  test_fetch_earnings_call.py  test_gemini_client.py  test_grounding_gates.py  test_ingestion_chunker.py  test_ingestion_sanitize.py  test_input_gate.py  test_input_gate_eval.py  test_input_gate_wiring.py  test_llm_budget.py  test_llm_suggestions.py  test_node_swap.py  test_notification_api.py  test_peer_synthesis.py  test_planner_agent.py  test_poc_transcript_ingest.py  test_polaris_eval_dataset.py  test_polaris_eval_judges.py  (+26 more)
tests/fixtures/: ctbc_financial_analyst_2026.html  mops_t100sb02_2891.html
tests/security/: __init__.py  conftest.py  test_llm01_prompt_injection.py  test_llm02_sensitive_disclosure.py  test_llm06_excessive_agency.py  test_llm09_misinformation.py
(+173 files in other folders)
