[project]
name = "polaris-desk"
version = "0.1.0"
description = "Polaris Desk — 台股法遵與投研 Agent-Augmented Research Workflow"
requires-python = ">=3.13"   # 團隊統一用 Python 3.13 開發（見 .python-version）

dependencies = [
    # 編排
    "langgraph>=0.6",
    "langchain-core>=0.3",
    # 設定
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # LLM / 檢索
    "google-genai>=1.0",          # Gemini 新版 SDK（取代已淘汰的 google-generativeai）
    "cohere>=5.5",                 # Rerank
    "tavily-python>=0.3",          # Deep Research 網路搜尋
    "rank-bm25>=0.2",              # BM25 關鍵字檢索
    # 離線 fallback 向量庫（pgvector；預設後端為 BigQuery）
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # 雲端向量庫（BigQuery）
    "google-cloud-bigquery>=3.25",
    # D8 prompt 壓縮量測：token 計數（離線、確定性）
    "tiktoken>=0.7",
    # R4 ingestion：法說稿 PDF 文字抽取（純 Python、輕量；掃描檔需 OCR 另計）
    "pypdf>=4.0",
    # W4 thin API：後端 HTTP 入口（Cloud Run + R7 Vercel 對接；純 Python、無 torch）
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # R7-1 使用者登入 + 活動紀錄：驗 Google id_token + Firestore 存 per-user 紀錄/訂閱
    # （皆延遲 import；CI 注入 fake → token-free，不連 GCP）
    "google-auth>=2.30",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]
eval = [
    # RAGAS 0.4 imports the removed langchain_community Vertex AI adapter.
    # The evaluator below uses the RAGAS 0.2 single-turn API, so keep this
    # compatible LangChain stack together until that implementation migrates.
    "ragas>=0.2,<0.3",
    "datasets>=3.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "langchain-community>=0.3,<0.4",
    "langchain-google-genai>=2.0,<3.0",
]
# D8 真實 LLMLingua backend（torch+transformers+模型權重 ~2GB）。
# 預設 / CI 不裝 → 走確定性壓縮基線；本機量 ≥50% 目標時才 `uv pip install -e '.[llmlingua]'`。
llmlingua = [
    "llmlingua>=0.2",
]
eval-gate = [
    "openai>=1.0",
    "anthropic>=0.40",
]
# 第 4 路 ColPali query 端編碼器（#133）：colpali-v1.2 權重 + torch（~5GB，需 GPU）。
# 預設 / CI 不裝 → active_colpali_query_fn() 回 None、第 4 路關閉、0 下載。
# 跑 round-trip 驗收（scripts/colpali_roundtrip_check.py）時才
# `uv pip install -e '.[colpali]'` 並設 COLPALI_QUERY_ENCODER=1。
colpali = [
    "colpali-engine>=0.3",
    "torch>=2.2",
    "pillow>=10.0",
]
# 圖表/掃描頁 vision ingestion（spec 2026-06-23）：頁面渲染。google-genai 已是核心相依。
# 預設 / CI 不裝 → vision gate 關、不 import。跑 ingestion 才 `uv pip install -e '.[vision]'`。
vision = [
    "pymupdf>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
# 不收集 Google Drive / macOS 同步衝突副本（如 "test_cli 2.py"），避免重複計數
addopts = ["--ignore-glob=* [0-9].py"]
# 第三方雜訊：fastapi TestClient 對 httpx/starlette 的 deprecation（非本專案碼，輸出保持乾淨）
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"
